Fix z-index

--- a/src/styles/village.css
+++ b/src/styles/village.css
@@ -743,7 +743,7 @@ body {
       grid-row: 2 / 4;
       height: var(--prediction-image-size);
       width: var(--prediction-image-size);
-      z-index: 1;
+      z-index: -1;
     }
 
     &--times {
@@ -755,7 +755,7 @@ body {
       grid-row: 3;
       justify-content: center;
       line-height: 1;
-      z-index: 2;
+      z-index: 0;
     }
 
     &--number {
@@ -764,7 +764,7 @@ body {
       grid-column: 4;
       grid-row: 3;
       line-height: 1;
-      z-index: 2;
+      z-index: 0;
     }
   }
 }
